- fixed permSize